fix: tag gap

--- a/client/src/Style/components/_work-card.scss
+++ b/client/src/Style/components/_work-card.scss
@@ -1,6 +1,6 @@
 .work-card
 {
-    height: 250px;
+    min-height: 250px;
     background-color: var(--glass);
     backdrop-filter: blur(2px);
 
@@ -49,7 +49,7 @@
     .footer
     {
 
-        margin-left: 10px;
+        margin: 10px;
 
         display: flex;
         flex-wrap: wrap;
